2003-08-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_model_create_component_with_defaults):
	use the default client to call cal_comp_*_new_with_defaults, and
	if no client is available, just create an empty icalcomponent.

	* gui/e-cal-view.c (e_cal_view_init): create an empty model.

	* gui/e-week-view.c (e_week_view_add_event): use the event's client.

2003-08-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_free_component_data): new
	function.

	* gui/e-cal-view.h: added 'allocated_comp_data' field to the
	ECalViewEvent structure.

	* gui/e-day-view.c (e_day_view_add_event): allocate the event's
	ECalModelComponent if it hasn't been set.
	(e_day_view_update_event_cb, e_day_view_remove_event_cb,
	e_day_view_free_event_array): if the ECalModelComponent has
	been allocated by the view, free it here.

	* gui/e-week-event.c (e_week_view_add_event,
	e_week_view_update_event_cb, e_week_view_remove_event_cb,
	e_week_view_free_events): same as EDayView.

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (ecm_append_row, ecm_get_color_for_component):
	* gui/e-cal-model-tasks.c (ecmt_get_color_for_component): merged
	missing bith from calendar-views-with-model branch.

2003-08-13  JP Rosevear  <jpr@ximian.com>

	* cal-client/cal-client.c (real_open_calendar): set the priv->cal
	pointer in a slightly different spot so we have it in the call
	back

	* gui/e-cal-model.c (e_cal_model_get_client_list): merge this in
	properly

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-week-view-event-item.c (e_week_view_event_item_draw): draw
	a filled rectangle and a black border around it for one-day events.

	* gui/e-day-view-top-item.c (e_day_view_top_item_draw_long_event):
	fill the rectangle for the item with its associated color.

2003-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_open): unref the client if there
	is an error.