@@ -1,3 +1,13 @@
+2003-08-15  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-cal-model.c (e_cal_model_finalize): don't unref the
+	'accounts' field, since it is internal to itip-utils.c.
+
+	* gui/alarm-notify/alarm-notify.c (alarm_notify_add_calendar):
+	initialize all fields of the LoadedClient struct before calling
+	cal_client_open_calendar(), since the "cal_opened_cb" signal is
+	now emitted within it.
+
 2003-08-14  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/e-cal-model.c (e_cal_model_create_component_with_defaults):
